Add reps per set and num sets interactive menu

--- a/deep_learning/ai_gym_tracker/configs/application.yaml
+++ b/deep_learning/ai_gym_tracker/configs/application.yaml
@@ -46,6 +46,9 @@ interface:
     timer:
       font: FONT_HERSHEY_SIMPLEX
       font_scale: 2
+    numeric_menu:
+      font: FONT_HERSHEY_SIMPLEX
+      font_scale: 2
 
 logging:
   level: INFO
