Add sound fx to the menu

--- a/deep_learning/ai_gym_tracker/configs/application.yaml
+++ b/deep_learning/ai_gym_tracker/configs/application.yaml
@@ -27,6 +27,12 @@ interface:
       b: 0
     position_top: true
   start_pose_image_path: src/assets/human-body-pose-3d.png
+  sound:
+    # start: src/assets/sounds/start.wav
+    # stop: src/assets/sounds/stop.wav
+    # error: src/assets/sounds/error.wav
+    select: src/assets/sounds/select.wav
+    success: src/assets/sounds/success.wav
   text_configs:
     counter:
       font: FONT_HERSHEY_DUPLEX
